Bug 152392 - Elements sidebar font in system dark mode lacks contrast: black on grey
Summary: Elements sidebar font in system dark mode lacks contrast: black on grey
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha1+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0
Keywords: regression
: 154032 (view as bug list)
Depends on:
Blocks: UI-Theming Elements-Pane Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2022-12-06 10:47 UTC by stragu
Modified: 2023-03-06 22:56 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of issue in LO 7.5 with GTK3 (15.59 KB, image/png)
2022-12-06 10:48 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2022-12-06 10:47:10 UTC
Steps:

1. Open Math component
2. Expand sidebar, Elements deck

Results:

Font is black and lack contrast (black on dark grey on Ubuntu 20.04 with GNOME's dark mode).

Seen with both KF5 and GTK3:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: c9e961e6803a70587bd4686d05abdd4ac11de434
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: c9e961e6803a70587bd4686d05abdd4ac11de434
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Not reproducible:

Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 1 stragu 2022-12-06 10:48:59 UTC
Created attachment 184016 [details]
Screenshot of issue in LO 7.5 with GTK3
Comment 2 stragu 2022-12-06 10:50:46 UTC
Mike and Caolán, you might be interested.
Comment 3 V Stuart Foote 2022-12-06 19:32:32 UTC
No issue with Elements deck on Windows builds in os/DE 'Dark' color theme. fg of each element/example is the White of the formula canvas, good contrast to the bg.

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: c50cf1883af26daebdfc9d796ced3c20c222f43b
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 4 Caolán McNamara 2022-12-06 20:18:14 UTC
I can reproduce
Comment 5 Commit Notification 2022-12-07 10:05:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dab143489838c0b91eadc8bf7f9d7e2537336751

Resolves: tdf#152392 use sidebar text color for COL_AUTO in examples

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 stragu 2022-12-08 10:03:49 UTC
Fix verified in:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ad085990b8073a122ac5222e5220f8f1d6826dcf
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Caolán!
Comment 7 V Stuart Foote 2023-03-06 22:56:22 UTC
*** Bug 154032 has been marked as a duplicate of this bug. ***