Resolves: tdf#152392 use sidebar text color for COL_AUTO in examples

Change-Id: I5f5c1a6c79c65bd1d4bf2de4af02bef5d60ee5c5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143745
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>